Closed
Bug 574635
Opened 15 years ago
Closed 15 years ago
Tool-tips appear in TaskBar
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | beta2+ |
People
(Reporter: jmjjeffery, Assigned: jimm)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
204.39 KB,
image/png
|
Details | |
|
4.72 KB,
patch
|
robarnold
:
review+
|
Details | Diff | Splinter Review |
Since the landing of https://bugzilla.mozilla.org/show_bug.cgi?id=513162
Tool-tips now attempt to display in the Taskbar.
On Win7 with previews enabled is shows in the Icon stack as an activity change, but when trying to view by mousing over the Icon its empty and goes away when clicked on.
STR:
1. Open today's Minefield Nightly
2. Click on the FavIcon in the Location bar (Larry)
3. Note the activity flicker in the TaskBar on the Minefield Icon.
Comment 1•15 years ago
|
||
Same problem here. Switched back to 624 build.
Comment 2•15 years ago
|
||
Yeah, Larry and tooltips don't show up for me.
| Reporter | ||
Comment 3•15 years ago
|
||
Not sure if its related, or another bug, but mid-click to activate scrolling, does not display the Icon for scrolling. Scrolling works, just no navigation Icon.
Comment 6•15 years ago
|
||
jimm - any idea what's going on here?
Is this bug causing the following problems as well?
- when bookmarking a page, "Edit Bookmark" dialog is not displayed
- "Share location" dialog not displayed when accessing geolocation page.
| Assignee | ||
Comment 8•15 years ago
|
||
This backs out some changes to HideChromeWindow and SetWindowTranslucencyInner w/are causing problems for popups. We can revisit linking these two up another day.
Assignee: nobody → jmathies
Attachment #454075 -
Flags: review?(tellrob)
Updated•15 years ago
|
Attachment #454075 -
Flags: review?(tellrob) → review+
| Assignee | ||
Comment 9•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 10•15 years ago
|
||
V. Fixed with the hourly using cset above.
Comment 15•15 years ago
|
||
What is going on here? This is not a duplicate, and I see repeated strokes of the code number of my Bug Report. This is about Tool-tips and TaskBar, not about the scroll wheel.
Comment 16•15 years ago
|
||
I mean, four different bug reports have been marked as a duplicate, but later stroken over.
Comment 17•15 years ago
|
||
I'll try and keep this short and sweet. Its a code fix dupe.
The code that was patched and landed in this bug is to fix your problem, but the code is the exact same thing that fixes other bugs or bugs reported because of the same underlining issue was reported because of bug 513162. So then they are duped back to this one. :)
Comment 18•15 years ago
|
||
What do you mean? How do I fix MY issue?
Comment 19•15 years ago
|
||
Its should be in tomorrows nightly.
Comment 20•15 years ago
|
||
Does that mean I can go to Help -> Check for Updates... in my pre-beta FireFox web browser tomorrow and get the update, or do I have to manually download the new version through the Mozilla FireFox web site?
Comment 21•15 years ago
|
||
(In reply to comment #20)
> Does that mean I can go to Help -> Check for Updates... in my pre-beta FireFox
> web browser tomorrow and get the update:
Yup. As to not bug the rest of the users who receive mail from this bug. Please followup in MozillaZine or elsewhere if you have further questions as this is not a forum for general support questions but for bug fixing. Thanks.
blocking2.0: ? → beta2+
You need to log in
before you can comment on or make changes to this bug.
Description
•