Bug 574635 - Undo changes to HideChromeWindow and SetWindowTranslucencyInner which messed up popup visiblility. Also, don't ignore invalidate requests on a widget in Resize calls when window bounds have not changed. r=tellrob.